<resources>
    <string name="app_name">World Satellite Tracking</string>
    <string name="R_launch_date">Launch Date</string>
    <string name="R_date">Date</string>
    <string name="R_photo">Photo</string>
    <string name="R_name">Name</string>
    <string name="R_satellite_type">Satellite Type</string>
    <string name="iv_country_flage">Country_Flag</string>
    <string name="tv_satellite_number">Satellite Number</string>
    <string name="tv_country_name">Country Name</string>
    <string name="power_by_text">Power By</string>
    <string name="machine_code_inc_text">Machine Code.inc</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="mail">Mail</string>
    <string name="about_text">About</string>
    <string name="search_text">Search</string>
</resources>
