<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3c3f41"
    android:orientation="horizontal"
    android:layout_margin="2dp"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_satellite_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/R_photo"
            app:srcCompat="@android:drawable/ic_delete" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_satellite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_gravity="top|center"
            android:text="@string/R_name"
            android:textAlignment="center"
            android:textColor="#61d05d" />

        <TextView
            android:id="@+id/tv_satellite_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:maxWidth="150dp"
            android:gravity="bottom"
            android:text="@string/R_satellite_type"
            android:textAlignment="center"
            android:textColor="#faf7f7" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_launch_date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="3dp"
            android:maxWidth="150dp"
            android:text="@string/R_launch_date"
            android:textAlignment="center"
            android:textColor="#d72a92" />

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:maxWidth="150dp"
            android:text="@string/R_date"
            android:textAlignment="center"
            android:textColor="#f0d044" />
    </LinearLayout>
</LinearLayout>