<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bsb_bottom_sheet_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3c3f41"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_author_header"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/power_by_text"
        android:textAlignment="center"
        android:textColor="#e860e32c"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_author_header"
        android:layout_centerHorizontal="true"
        android:text="@string/machine_code_inc_text"
        android:textAlignment="center"
        android:textColor="#e860e32c"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/fl_image_layout"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp">

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick_Facebook"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick_Twitter"
            android:contentDescription="@string/twitter" />

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick_Mail"
            android:contentDescription="@string/mail" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_marginTop="127dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_more_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:scrollbars="vertical"
                android:textSize="25sp" />
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>